# pythonista-stubs

./: .travis.yml  CLAUDE.md  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
stubs/: _cb.pyi
stubs/appex/: __init__.pyi
stubs/clipboard/: __init__.pyi
stubs/console/: __init__.pyi
stubs/editor/: __init__.py
stubs/pythonista_stubs/: appex.pyi  canvas.pyi  cb.pyi  clipboard.pyi  console.pyi  contacts.pyi  dialogs.pyi  editor.pyi  keyboard.pyi  keychain.pyi  linguistictagger.pyi  location.pyi  motion.pyi  notification.pyi  objc_util.pyi  photos.pyi  reminders.pyi  shortcuts.pyi  sound.pyi  speech.pyi  ui.py  ui.pyi
stubs/reminders/: __init__.pyi
stubs/sound/: __init__.pyi
stubs/speech/: __init__.pyi
stubs/ui/: __init__.py
