[build-system]
requires = ["setuptools>=80.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonista-stubs"
authors = [
    { name = "Harold Martin", email = "Harold.Martin@gmail.com" },
    { name = "Dmytro Yaroshenko" }
]
description = "A collection of Pythonista stub files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "types-pillow>=10.2.0.20240822",
    "typing-extensions>=4.14.1",
]
license = { file = "LICENSE" }
keywords = ["pythonista", "stubs", "ios", "ide"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ['version']

[project.urls]
"Homepage" = "https://github.com/hbmartin/pythonista-stubs"
"Bug Reports" = "https://github.com/hbmartin/pythonista-stubs/issues"
"Source" = "https://github.com/hbmartin/pythonista-stubs"

[tool.setuptools.package-dir]
"pythonista_stubs" = "stubs"

[tool.setuptools.packages.find]
where = ["stubs"]
include = [
    "pythonista_stubs*",
]

[tool.setuptools.package-data]
"*" = ["**/*"]  # to include root-places .pyi stubs

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1", # as a dev dependency, Pythonista does not support mypy
    "ruff>=0.12.8",
]

[tool.mypy]
packages = ["stubs"]
ignore_missing_imports = true

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py311"

lint.select = ["ALL"]
lint.ignore = ["A002", "ANN204", "D205", "D400", "D401", "D404", "D415", "PIE790", "PYI021", "PYI048"]

[tool.ruff.lint.per-file-ignores]
"stubs/pythonista_stubs/objc_util.pyi" = ["ANN401", "D418", "N802"]
